VBM     [x]         [x]         [x]          [x]            [x]         [x]     [x]
M64**   [x]         [x]         [x]          [x]            [x]         [ ]     [x]
MMV     [x]         [x]         [x]          [x]            [x]         [?]     [x]
PXM     [x]         [x]         [x]          [x]            [x]         [?]     [x]

* only Snes9x 1.43 is supported.
** mupen support is difficult since there's not direct correlation between how often an input sample is applied to a particular frame.

///////////////////////
// OUTSTANDING TASKS //
///////////////////////
TODO::Why don't I just replace the movie's input collection instead of working with another frameData object? No updates are made till the save is invoked, so this is just wasting memory, as the original copy is never used other than to populate the listview initially.

TODO::Undo still buggy on updates (add/remove works fine though)

high priority
-------------
TODO::Add exception handlers to format loads (in case headers check out but input is corrupt)
TODO::Add exception handlers for FCM's that terminate input population early (null entries in input table)
TODO::Finish mupen support (will have to be controller inputs ... not frame inputs :(
TODO::Add guide to formats of input strings.

medium priority
---------------
TODO::FCM doesn't track control updates (figure out best way to implement)
TODO::SMV support doesn't include control events (RESET is all I can see at the moment)
TODO::Add block overwrite on paste (as opposed to just inserting the block)
TODO::Add controller muxing/demuxing (add/remove controllers)
TODO::Add ZSNES support
TODO::Add Snes9x 1.51 support
TODO::Add ability to extract save-state from movie

low priority
------------
TODO::Overhaul frame input editing
TODO::Line up input (fake columns of data, so if <>A, < AB, v  BS, ... etc)
      (This prolly won't happen until I figure out how I want to display input)

not likely to happen any time soon